--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   clipboard: ^0.1.3
   fluentui_system_icons: ^1.1.200
   shared_preferences: ^2.1.1
+  flutter_svg: ^2.0.6
 
 dev_dependencies:
   flutter_test:
@@ -74,8 +75,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets\images\undraw_set_preferences_kwia.svg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
