--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,13 +89,13 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "procam_commander" "\0"
+            VALUE "CompanyName", "tomastepa" "\0"
+            VALUE "FileDescription", "ProCam Commander" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "procam_commander" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2023 com.example. All rights reserved." "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2023 tomastepa. All rights reserved." "\0"
             VALUE "OriginalFilename", "procam_commander.exe" "\0"
-            VALUE "ProductName", "procam_commander" "\0"
+            VALUE "ProductName", "ProCam Commander" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
