--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,12 +37,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  fluent_ui: ^4.7.1
+  fluent_ui: ^4.8.0
   provider: ^6.0.5
   system_theme: ^2.1.0
   window_manager: ^0.3.5
   url_launcher: ^6.1.11
-  go_router: ^12.0.0
+  go_router: ^13.0.0
   flutter_acrylic: ^1.1.0+1
   flutter_syntax_view: ^4.0.0
   flutter_markdown: ^0.6.14
@@ -73,7 +73,7 @@ flutter:
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
-  uses-material-design: false
+  uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
   assets:
