--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,13 +39,13 @@ dependencies:
   cupertino_icons: ^1.0.2
   fluent_ui: ^4.8.0
   provider: ^6.0.5
-  system_theme: ^2.1.0
-  window_manager: ^0.3.5
+  system_theme: ^3.1.1
+  window_manager: ^0.4.2
   url_launcher: ^6.1.11
-  go_router: ^13.0.0
+  go_router: ^14.2.7
   flutter_acrylic: ^1.1.0+1
   flutter_syntax_view: ^4.0.0
-  flutter_markdown: ^0.6.14
+  flutter_markdown: ^0.7.3+1
   http: ^1.0.0
   flutter_native_splash: ^2.3.5
   clipboard: ^0.1.3
@@ -62,7 +62,8 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
+  msix: ^3.16.7
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -105,3 +106,17 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+msix_config:
+  display_name: ProCam Commander
+  publisher_display_name: ProCam Commander
+  store: true
+  publisher: CN=DE87A7BC-1FEE-4B7F-BA0D-25E755588C97
+  identity_name: 37277ProCamCommander.ProCamCommander
+  msix_version: 1.0.0.0
+  logo_path: ./assets/images/app_icon.ico
+  icons_background_color: "#ffffff"
+  architecture: x64
+  # See https://docs.microsoft.com/en-us/windows/uwp/packaging/app-capability-declarations
+  # capabilities: "internetClient"
+  capabilities: "confirmAppClose"
